# poc--bevy-pixels-web-game

./: .gitignore  Cargo.toml  Makefile  README.md  Trunk.itch_io.toml  Trunk.release.toml  Trunk.toml  rustfmt.toml
.github/shared-steps/: action.yml
.github/workflows/: build.yml  build_test_lint.yml  clippy.yml  test.yml
assets/: pico-8-font.aseprite  touch_controls.aseprite
dist_templates/web/: audio_context_hack.js  index.css  index.html  mobile_audio_fix.js
pico8-version-to-rewrite-from/: avoid-your-past.p8
pico8-version-to-rewrite-from/src/: main.lua
pico8-version-to-rewrite-from/src/game_states/: game_state_gameplay.lua  game_state_over.lua  game_state_splash.lua  game_state_start.lua
pico8-version-to-rewrite-from/src/gameplay/: animated_sprite.lua  item.lua  level.lua  memories.lua  memory.lua  mode.lua  particle.lua  player.lua  score.lua  trail.lua
pico8-version-to-rewrite-from/src/global/: assets.lua  audio.lua  collisions.lua  utils.lua
pico8-version-to-rewrite-from/src/gui/: sash.lua  topbar.lua
src/: irect.rs  main.rs  pixel_canvas.rs
src/font/: font_glyph.rs  font_sheet.rs  mod.rs
src/game/: audio.rs  coin.rs  collision.rs  game_area.rs  game_state.rs  mod.rs  player.rs  position.rs  text.rs  top_bar.rs  trail.rs  xy.rs
src/game/input/: gamepad_controls.rs  keyboard_controls.rs  mod.rs  touch_controls.rs
src/game/logic/: collect_coins.rs  mod.rs
src/game/sprites/: mod.rs  sprite_sheet.rs  systems.rs
src/pico8/: mod.rs  pico8_color.rs  pico8_font.rs
src/pixel_art/: draw.rs  mod.rs  pico8_color.rs  pixel_canvas.rs
src/pixel_canvas/: color.rs  draw.rs  draw_on_frame.rs  drawing_context.rs  mod.rs  plugin.rs
web_template/: index.html
