[package]
name = "bevy_pixels_web_game_poc"
version = "0.1.0"
edition = "2021"
rust-version = "1.68"
authors = ["Beetroot Paul <paul@beetrootpaul.com>"]
repository = "https://github.com/beetrootpaul/poc--bevy-pixels-web-game"
license = "MIT"
#TODO: any other fields?

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode.
# See: https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations
# See: https://bevy-cheatbook.github.io/pitfalls/performance.html#unoptimized-debug-builds
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code.
# See: https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations
# See: https://bevy-cheatbook.github.io/pitfalls/performance.html#unoptimized-debug-builds
[profile.dev.package."*"]
opt-level = 3

[features]
default = []
visualize_schedule_main = ["dep:bevy_mod_debugdump"]
visualize_schedule_fixed_update = ["dep:bevy_mod_debugdump"]

[dependencies]
pixels = "0.11.0" # https://crates.io/crates/pixels
bevy_mod_debugdump = { version = "0.7.0", optional = true } # https://crates.io/crates/bevy_mod_debugdump

# https://crates.io/crates/bevy
[dependencies.bevy]
version = "0.10.0"
# Available features: https://docs.rs/crate/bevy/latest/features
#
# Please, keep bevy's render and bevy_wgpu features disabled, since (according to https://crates.io/crates/bevy_pixels )
# they will conflict with rendering based on `pixels`, which we have implemented in `pixel_art/pixel_canvas.rs` here.
#
default-features = false
features = [
    "bevy_winit",
]

# https://crates.io/crates/image
[dependencies.image]
version = "0.24.5"
# Available features: https://docs.rs/crate/image/latest/features
default-features = false
features = [
    "png",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
pollster = "0.3.0"

[dev-dependencies]
itertools = "0.10.5" # https://crates.io/crates/itertools
