[package]
name = "bevy_pixels_web_game_poc"
version = "0.1.0"
edition = "2021"
rust-version = "1.68"
authors = ["Beetroot Paul <paul@beetrootpaul.com>"]
repository = "https://github.com/beetrootpaul/poc--bevy-pixels-web-game"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode.
# See: https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations
# See: https://bevy-cheatbook.github.io/pitfalls/performance.html#unoptimized-debug-builds
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code.
# See: https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations
# See: https://bevy-cheatbook.github.io/pitfalls/performance.html#unoptimized-debug-builds
[profile.dev.package."*"]
opt-level = 3

[features]
default = []
visualize_schedule_main = ["dep:bevy_mod_debugdump"] # enable this one to generate main schedule's diagram (w/o running the game)
visualize_schedule_fixed_update = ["dep:bevy_mod_debugdump"] # enable this one to generate fixed update schedule's diagram (w/o running the game)

[dependencies]
bevy_mod_debugdump = { version = "0.7.0", optional = true } # https://crates.io/crates/bevy_mod_debugdump
pixels = "0.12.0" # https://crates.io/crates/pixels

[dependencies.bevy] # https://crates.io/crates/bevy
version = "0.10.0"
# Available features: https://docs.rs/crate/bevy/latest/features
#
# Please, keep bevy's render and bevy_wgpu features disabled, since (according to https://crates.io/crates/bevy_pixels )
# they will conflict with rendering based on `pixels`, which we have implemented in `pixel_art/pixel_canvas.rs` here.
#
default-features = false
features = [
    "bevy_audio",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_winit",
    "vorbis",
]

[dependencies.image] # https://crates.io/crates/image
version = "0.24.5"
# Available features: https://docs.rs/crate/image/latest/features
default-features = false
features = [
    "png",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
# See: https://bevy-cheatbook.github.io/platforms/wasm/panic-console.html#panic-messages
console_error_panic_hook = "0.1.7" # https://crates.io/crates/console_error_panic_hook
# Required by `Pixels::new_async(…).block_on()`
pollster = "0.3.0" # https://crates.io/crates/pollster
wasm-bindgen = "0.2.84" # https://crates.io/crates/wasm-bindgen

[dev-dependencies]
itertools = "0.10.5" # https://crates.io/crates/itertools
